@@ -95,6 +95,7 @@
     * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
     * 0436 FIX: Fix broken Site status switching via sidebar snapin...
     * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...
+    * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
